--- a/xrproxy_uwsgi.ini
+++ b/xrproxy_uwsgi.ini
@@ -13,133 +13,133 @@ set-ph = RPC_BLOCK_VER=2.0
 
 # Ethereum XCloud services
 set-ph = URL_eth_accounts_HOSTIP=
-set-ph = URL_eth_accounts_PORT=5000
+set-ph = URL_eth_accounts_PORT=80
 
 set-ph = URL_eth_blockNumber_HOSTIP=
-set-ph = URL_eth_blockNumber_PORT=5000
+set-ph = URL_eth_blockNumber_PORT=80
 
 set-ph = URL_eth_call_HOSTIP=
-set-ph = URL_eth_call_PORT=5000
+set-ph = URL_eth_call_PORT=80
 
 set-ph = URL_eth_chainId_HOSTIP=
-set-ph = URL_eth_chainId_PORT=5000
+set-ph = URL_eth_chainId_PORT=80
 
 set-ph = URL_eth_estimateGas_HOSTIP=
-set-ph = URL_eth_estimateGas_PORT=5000
+set-ph = URL_eth_estimateGas_PORT=80
 
 set-ph = URL_eth_gasPrice_HOSTIP=
-set-ph = URL_eth_gasPrice_PORT=5000
+set-ph = URL_eth_gasPrice_PORT=80
 
 set-ph = URL_eth_getBalance_HOSTIP=
-set-ph = URL_eth_getBalance_PORT=5000
+set-ph = URL_eth_getBalance_PORT=80
 
 set-ph = URL_eth_getBlockByHash_HOSTIP=
-set-ph = URL_eth_getBlockByHash_PORT=5000
+set-ph = URL_eth_getBlockByHash_PORT=80
 
 set-ph = URL_eth_getBlockByNumber_HOSTIP=
-set-ph = URL_eth_getBlockByNumber_PORT=5000
+set-ph = URL_eth_getBlockByNumber_PORT=80
 
 set-ph = URL_eth_getBlockTransactionCountByHash_HOSTIP=
-set-ph = URL_eth_getBlockTransactionCountByHash_PORT=5000
+set-ph = URL_eth_getBlockTransactionCountByHash_PORT=80
 
 set-ph = URL_eth_getBlockTransactionCountByNumber_HOSTIP=
-set-ph = URL_eth_getBlockTransactionCountByNumber_PORT=5000
+set-ph = URL_eth_getBlockTransactionCountByNumber_PORT=80
 
 set-ph = URL_eth_getCode_HOSTIP=
-set-ph = URL_eth_getCode_PORT=5000
+set-ph = URL_eth_getCode_PORT=80
 
 set-ph = URL_eth_getFilterChanges_HOSTIP=
-set-ph = URL_eth_getFilterChanges_PORT=5000
+set-ph = URL_eth_getFilterChanges_PORT=80
 
 set-ph = URL_eth_getFilterLogs_HOSTIP=
-set-ph = URL_eth_getFilterLogs_PORT=5000
+set-ph = URL_eth_getFilterLogs_PORT=80
 
 set-ph = URL_eth_getStorageAt_HOSTIP=
-set-ph = URL_eth_getStorageAt_PORT=5000
+set-ph = URL_eth_getStorageAt_PORT=80
 
 set-ph = URL_eth_getTransactionByBlockHashAndIndex_HOSTIP=
-set-ph = URL_eth_getTransactionByBlockHashAndIndex_PORT=5000
+set-ph = URL_eth_getTransactionByBlockHashAndIndex_PORT=80
 
 set-ph = URL_eth_getTransactionByBlockNumberAndIndex_HOSTIP=
-set-ph = URL_eth_getTransactionByBlockNumberAndIndex_PORT=5000
+set-ph = URL_eth_getTransactionByBlockNumberAndIndex_PORT=80
 
 set-ph = URL_eth_getTransactionByHash_HOSTIP=
-set-ph = URL_eth_getTransactionByHash_PORT=5000
+set-ph = URL_eth_getTransactionByHash_PORT=80
 
 set-ph = URL_eth_getTransactionCount_HOSTIP=
-set-ph = URL_eth_getTransactionCount_PORT=5000
+set-ph = URL_eth_getTransactionCount_PORT=80
 
 set-ph = URL_eth_getTransactionReceipt_HOSTIP=
-set-ph = URL_eth_getTransactionReceipt_PORT=5000
+set-ph = URL_eth_getTransactionReceipt_PORT=80
 
 set-ph = URL_eth_getUncleByBlockHashAndIndex_HOSTIP=
-set-ph = URL_eth_getUncleByBlockHashAndIndex_PORT=5000
+set-ph = URL_eth_getUncleByBlockHashAndIndex_PORT=80
 
 set-ph = URL_eth_getUncleByBlockNumberAndIndex_HOSTIP=
-set-ph = URL_eth_getUncleByBlockNumberAndIndex_PORT=5000
+set-ph = URL_eth_getUncleByBlockNumberAndIndex_PORT=80
 
 set-ph = URL_eth_getUncleCountByBlockHash_HOSTIP=
-set-ph = URL_eth_getUncleCountByBlockHash_PORT=5000
+set-ph = URL_eth_getUncleCountByBlockHash_PORT=80
 
 set-ph = URL_eth_getUncleCountByBlockNumber_HOSTIP=
-set-ph = URL_eth_getUncleCountByBlockNumber_PORT=5000
+set-ph = URL_eth_getUncleCountByBlockNumber_PORT=80
 
 set-ph = URL_eth_getWork_HOSTIP=
-set-ph = URL_eth_getWork_PORT=5000
+set-ph = URL_eth_getWork_PORT=80
 
 set-ph = URL_eth_hashrate_HOSTIP=
-set-ph = URL_eth_hashrate_PORT=5000
+set-ph = URL_eth_hashrate_PORT=80
 
 set-ph = URL_eth_mining_HOSTIP=
-set-ph = URL_eth_mining_PORT=5000
+set-ph = URL_eth_mining_PORT=80
 
 set-ph = URL_eth_newBlockFilter_HOSTIP=
-set-ph = URL_eth_newBlockFilter_PORT=5000
+set-ph = URL_eth_newBlockFilter_PORT=80
 
 set-ph = URL_eth_newFilter_HOSTIP=
-set-ph = URL_eth_newFilter_PORT=5000
+set-ph = URL_eth_newFilter_PORT=80
 
 set-ph = URL_eth_newPendingTransactionFilter_HOSTIP=
-set-ph = URL_eth_newPendingTransactionFilter_PORT=5000
+set-ph = URL_eth_newPendingTransactionFilter_PORT=80
 
 set-ph = URL_eth_protocolVersion_HOSTIP=
-set-ph = URL_eth_protocolVersion_PORT=5000
+set-ph = URL_eth_protocolVersion_PORT=80
 
 set-ph = URL_eth_sendRawTransaction_HOSTIP=
-set-ph = URL_eth_sendRawTransaction_PORT=5000
+set-ph = URL_eth_sendRawTransaction_PORT=80
 
 set-ph = URL_eth_submitWork_HOSTIP=
-set-ph = URL_eth_submitWork_PORT=5000
+set-ph = URL_eth_submitWork_PORT=80
 
 set-ph = URL_eth_syncing_HOSTIP=
-set-ph = URL_eth_syncing_PORT=5000
+set-ph = URL_eth_syncing_PORT=80
 
 set-ph = URL_eth_uninstallFilter_HOSTIP=
-set-ph = URL_eth_uninstallFilter_PORT=5000
+set-ph = URL_eth_uninstallFilter_PORT=80
 
 set-ph = URL_eth_unsubscribe_HOSTIP=
-set-ph = URL_eth_unsubscribe_PORT=5000
+set-ph = URL_eth_unsubscribe_PORT=80
 
 set-ph = URL_net_listening_HOSTIP=
-set-ph = URL_net_listening_PORT=5000
+set-ph = URL_net_listening_PORT=80
 
 set-ph = URL_net_peerCount_HOSTIP=
-set-ph = URL_net_peerCount_PORT=5000
+set-ph = URL_net_peerCount_PORT=80
 
 set-ph = URL_net_version_HOSTIP=
-set-ph = URL_net_version_PORT=5000
+set-ph = URL_net_version_PORT=80
 
 set-ph = URL_web3_clientVersion_HOSTIP=
-set-ph = URL_web3_clientVersion_PORT=5000
+set-ph = URL_web3_clientVersion_PORT=80
 
 set-ph = URL_web3_sha3_HOSTIP=
-set-ph = URL_web3_sha3_PORT=5000
+set-ph = URL_web3_sha3_PORT=80
 
 set-ph = URL_parity_allTransactionHashes_HOSTIP=
-set-ph = URL_parity_allTransactionHashes_PORT=5000
+set-ph = URL_parity_allTransactionHashes_PORT=80
 
 set-ph = URL_parity_allTransactions_HOSTIP=
-set-ph = URL_parity_allTransactions_PORT=5000
+set-ph = URL_parity_allTransactions_PORT=80
 
 set-ph = URL_parity_unsubscribe_HOSTIP=
-set-ph = URL_parity_unsubscribe_PORT=5000
+set-ph = URL_parity_unsubscribe_PORT=80
